# BettingArbitroor

./: .gitignore  .pre-commit-config.yaml  README.md  api-test.py  arbitrage_finder.py  config.py  database.py  finder.py  generate_data.py  logger.py  matcher.py  pyproject.toml  retrieval.py  test_kalshi.py  test_matcher_demo.py  test_polymarket.py
matcher/: matcher.py  retrieval.py
notifiers/: __init__.py  base.py  console.py  discord.py  telegram.py
scrapers/: __init__.py  base.py  kalshi.py  polymarket.py
tests/: test_arbitrage_finder.py  test_markets.py
