[project]
name = "arbitrage-finder"
version = "0.1.0"
description = "Arbitrage finder bot between Polymarket and Kalshi"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.0",
    "ollama>=0.6.1",
    "requests>=2.31.0",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["arbitrage_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

